# EMCA-Stochastic-System

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: main.py  path_setup.py
app/assets/: style.css
app/pages/: 00_home.py  01_parametrizacion.py  02_simulacion.py  03_dashboard.py  login.py
config/: config_usuarios.json  settings.toml
core/analytics/: __init__.py  exportar.py  gantt.py  kpis.py  reportes_pdf.py
core/models/: parametros.py  resultados.py
core/simulation/: __init__.py  engine.py
core/stochastic/: __init__.py  distribuciones.py  sensibilidad.py
core/utils/: auth.py
data/scenarios/: Demo_EMCA_20260516_112259.json  Escenario_Base.json  Escenario_Base_20260516_111657.json  Escenario_Base_20260516_111703.json  Escenario_Base_20260516_111705.json  Escenario_Base_20260516_112243.json  Escenario_Base_20260516_112245.json  Escenario_Exigente.json  Escenario_Rapido.json
tests/: test_auth.py  test_distribuciones.py  test_engine.py  test_engine_calculos.py  test_kpis.py
