[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emca-pilotes"
version = "1.0.0"
description = "Sistema de Información Estocástico para Planificación de Pilotes — EMCA"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "simpy>=4.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "plotly>=5.22",
    "pydantic>=2.7",
    "loguru>=0.7",
    "openpyxl>=3.1",
    "SALib>=1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "app*"]
